fixed bug where description boxes took up too much space

--- a/client/src/components/Letterboxc/LetterboxcContainer/LetterboxcContainer.module.css
+++ b/client/src/components/Letterboxc/LetterboxcContainer/LetterboxcContainer.module.css
@@ -15,7 +15,6 @@
 }
 
 .descriptionBox {
-  height: 300px;
   width: 100%;
   display: flex;
   flex-direction: column;
